# tag-expressions

./: ARCHITECTURE.md  CHANGELOG.md  README.md
.github/workflows/: codeql-dotnet.yaml  codeql-go.yaml  codeql-java.yaml  codeql-javascript.yaml  codeql-python.yaml  codeql-ruby.yaml  release-mvn.yml  release-npm.yml  release-nuget.yaml  release-perl.yml  release-php.yaml  release-pypi.yaml  release-rubygem.yml  stryker-javascript.yml  test-dotnet.yaml  test-dotnet.yml  test-go.yaml  test-go.yml  test-java.yaml  test-java.yml  test-javascript-stryker.yaml  test-javascript-stryker.yml  test-javascript.yaml  test-javascript.yml  test-perl.yaml  test-perl.yml  test-php.yaml  test-php.yml  test-python.yaml  test-python.yml  test-ruby.yaml  test-ruby.yml
cpp/: CMakeLists.txt  README.md  build.sh
cpp/cmake/: cucumber-tag-expressions-config.cmake.in
cpp/example/: CMakeLists.txt
cpp/example/src/: basic_usage.cpp
cpp/examples/: basic_usage.cpp
cpp/include/cucumber-tag-expressions/: expression.hpp
cpp/include/cucumber/tag-expressions/: expression.hpp  parser.hpp
cpp/include/cucumber_tag_expressions/: expression.hpp  parser.hpp
cpp/src/: CMakeLists.txt  expression.cpp  parser.cpp
cpp/src/lib/: expression.cpp
cpp/tests/: CMakeLists.txt  README.md  test_errors.cpp  test_evaluations.cpp  test_expression.cpp  test_parser.cpp  test_parsing.cpp
cpp/tests/src/: test_errors.cpp  test_evaluations.cpp  test_expression.cpp  test_parsing.cpp  test_precedence.cpp
dotnet/: .editorconfig  .gitignore  Cucumber.TagExpressions.sln  Directory.Build.props  README.md  TagExpressions.sln  TagExpressions.snk
dotnet/Cucumber.TagExpressions/: Cucumber.TagExpressions.csproj  InternalsVisibleTo.TagExpressionsTest.cs  TagExpressionException.cs  TagExpressionParser.cs  TagLexer.cs  TagToken.cs
dotnet/Cucumber.TagExpressionsTest/: Cucumber.TagExpressionsTest.csproj  ErrorsTest.cs  EvaluationsTest.cs  ParsingTest.cs  TagLexerTests.cs  TestFolderHelper.cs
dotnet/TagExpressions/: Cucumber.TagExpressions.csproj  ITagExpression.cs  ITagExpressionParser.cs  InternalsVisibleTo.TagExpressionsTest.cs  TagExpression.cs  TagExpressionException.cs  TagExpressionParser.cs  TagExpressions.csproj  TagLexer.cs  TagToken.cs
dotnet/TagExpressionsTest/: Cucumber.TagExpressionsTest.csproj  ErrorsTest.cs  EvaluationsTest.cs  MSTestSettings.cs  ParsingTest.cs  TagExpressionsTest.csproj  TagExpressionsTest.snk  TagLexerTests.cs  TestFolderHelper.cs
go/: .gitignore  Makefile  errors_test.go  evaluation_test.go  go.mod  go.sum  parser.go  parsing_test.go
java/: pom.xml
java/src/main/java/: module-info.java
java/src/main/java/io/cucumber/tagexpressions/: TagExpressionException.java  TagExpressionParser.java  package-info.java
java/src/test/java/io/cucumber/tagexpressions/: ErrorsTest.java  EvaluationsTest.java  ParsingTest.java
javascript/: .mocharc.json  README.md  package-lock.json  package.json  stryker.conf.json
javascript/src/: index.ts
javascript/test/: errors.test.ts  evaluations.test.ts  parsing.test.ts  tag_expression_parser_test.ts  test.ts  testDataDir.ts
perl/: Makefile  cpanfile  default.mk  dist.ini
perl/lib/Cucumber/: TagExpressions.pm
perl/lib/Cucumber/TagExpressions/: Node.pm
perl/t/: 02-evaluate.t  03-shared-tests.t
php/: .gitattributes  .gitignore  .php-cs-fixer.dist.php  LICENSE  README.md  composer.json  phpstan.dist.neon  phpunit.xml
php/src/: Associativity.php  Expression.php  TagExpressionException.php  TagExpressionParser.php  TokenType.php
php/src/Expression/: AndExpression.php  LiteralExpression.php  NotExpression.php  OrExpression.php  TrueExpression.php
php/tests/: ErrorsTest.php  EvaluationsTest.php  ParsingTest.php
python/: .bumpversion.cfg  .envrc  .gitignore  DEVELOPMENT.rst  Makefile  README.rst  default.mk  invoke.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
python/cucumber_tag_expressions/: __init__.py  model.py  parser.py
python/py.requirements/: all.txt  basic.txt  develop.txt  testing.txt
python/scripts/: ensurepip_python27.sh  pytest_cmd.py
python/src/cucumber_tag_expressions/: __init__.py  model.py  parser.py
python/tasks/: __init__.py  py.requirements.txt  release.py  test.py
python/tests/data/: README.md  test_errors.py  test_evaluations.py  test_parsing.py
python/tests/functional/: test_tag_expression.py
python/tests/unit/: test_model.py  test_parser.py
ruby/: .gitignore  .rubocop.yml  .rubocop_todo.yml  Rakefile  cucumber-tag-expressions.gemspec
ruby/lib/cucumber/: tag_expressions.rb
ruby/lib/cucumber/tag_expressions/: expressions.rb  parser.rb
ruby/spec/: errors_spec.rb  evaluations_spec.rb  parsing_spec.rb  spec_helper.rb
testdata/: .parsing.yml.swp  errors.yml  evaluations.yml  parsing.yml  tests.yml
