[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[project]
name = "cucumber-tag-expressions"
authors = [
    {name = "Jens Engel", email = "jenisys@noreply.github.com"},
]
description = "Provides a tag-expression parser and evaluation logic for cucumber/behave"
version = "7.0.0"
keywords= ["BDD", "testing", "cucumber", "tag-expressions", "behave"]
license = "MIT"
license-files = [
    "LICENSE"
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cucumber/tag-expressions"
Download = "https://pypi.org/project/cucumber-tag-expressions"
Repository = "https://github.com/cucumber/tag-expressions"
Issues = "https://github.com/cucumber/tag-expressions/issues/"
Changelog = "https://github.com/cucumber/tag-expressions/releases"

[dependency-groups]
dev = [
    "pylint>=3.3.9",
    "ruff>=0.14.0",
    "tox>=4.31.0",
]
test = [
    "coverage>=7.10.7",
    "pytest>=4.4.2",
    "pytest-html>=1.22.1",
    "pyyaml>=6.0.3",
]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

[tool.ruff]
line-length = 100
